--- a/readme
+++ b/readme
@@ -58,6 +58,25 @@ contextBridge.exposeInMainWorld('electron', {
   ipc: { ...ipcRenderer }
 })
 
+- add url repository (github) in package.json electron
+- android:
+	- add android:networkSecurityConfig="@xml/network_security_config" in AndroidManifest.ml
 
+network_security_config.xml
 
+<?xml version="1.0" encoding="utf-8"?>
+<network-security-config>
+  <base-config cleartextTrafficPermitted="true">
+
+  </base-config>
+</network-security-config>
+
+	
+	- add permission in AndroidManifest.xml:
+		<uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
+		<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+
+- > Android Gradle plugin requires Java 11 to run. You are currently using Java 1.8.
+- Change IDE settings gradle jvm
+- 
 
